--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                 "name": "Togel Online",
                 "author": { "@type": "Person", "name": "OMTOGEL" },
                 "headline": "OMTOGEL | Situs Toto | Link Toto Togel Dan Bandar Togel Online Terbaik OM TOGEL",
-                "OMTOGEL merupakan situs toto togel online yang resmi telah dibuka di Indonesia bahkan di dunia, situs toto togel sudah tidak asing dan di kenal banyak kalangan masyarakat Indonesia dalam permainan tersebut.",
+                "description":"OMTOGEL merupakan situs toto togel online yang resmi telah dibuka di Indonesia bahkan di dunia, situs toto togel sudah tidak asing dan di kenal banyak kalangan masyarakat Indonesia dalam permainan tersebut.",
                 "keywords": ["omtogel, situs toto, situs togel, link toto, link togel, bandar togel, om togel, login omtogel, daftar omtogel"],
                 "image": "https://raw.githubusercontent.com/rusakalimantan/netlify4/main/jenifer-toto.png",
                 "url": "https://sanskrit.today/",
