--- a/index.html
+++ b/index.html
@@ -478,29 +478,29 @@
         <div class="kintils">
             <div class="slot-dana5k">
                 <div class="slotdana-container block1">
-                    <a href="https://omtogel88.pages.dev/daftar.html">
+                    <a href="https://jenifer88.netlify.app/login.html">
                         <button class="slot-dana"><img src="https://res.cloudinary.com/nomor-slot/image/upload/v1704392241/spacetogel/macallanpromo_fswsph.png" width="20px"></button>
                     </a>
-                    <a href="https://omtogel88.pages.dev/daftar.html">
+                    <a href="https://jenifer88.netlify.app/login.html">
                         <button class="slot-dana"><img src="https://res.cloudinary.com/nomor-slot/image/upload/v1704392246/spacetogel/macallanwa_r1eg18.png" width="20px"></button>
                     </a>
-                    <a href="https://omtogel88.pages.dev/daftar.html">
+                    <a href="https://jenifer88.netlify.app/login.html">
                         <button class="slot-dana"><img src="https://res.cloudinary.com/nomor-slot/image/upload/v1704392256/spacetogel/macallanin_tvzow7.png" width="20px"></button>
                     </a>
-                    <a href="https://omtogel88.pages.dev/daftar.html">
+                    <a href="https://jenifer88.netlify.app/login.html">
                         <button class="slot-dana"><img src="https://res.cloudinary.com/nomor-slot/image/upload/v1704392267/spacetogel/macallanchat_sht8lv.png" width="20px"></button>
                     </a>
                 </div>
                 <br>
 
                 <div class="block-img">
-                    <a href="https://omtogel88.pages.dev/daftar.html" target="_blank" rel="noopener noreferrer nofollow">
+                    <a href="https://jenifer88.netlify.app/login.html" target="_blank" rel="noopener noreferrer nofollow">
                         <amp-img height="800" width="800" layout="responsive" alt="OMTOGEL" src="https://i.pinimg.com/736x/9f/36/c7/9f36c7143ddd3b4dcdc02ab30d922cd1.jpg"></amp-img>
                     </a>
                 </div>
 
                 <div class="slotdana">
-                    <a href="https://omtogel88.pages.dev/daftar.html" target="_blank" rel="noopener noreferrer nofollow">
+                    <a href="https://jenifer88.netlify.app/login.html" target="_blank" rel="noopener noreferrer nofollow">
                         <button class="btn2"><strong>JANGAN RAGU & JANGAN BIMBANG BRODIE !</strong>
                             <div id="container-stars">
                                 <div id="stars"></div>
@@ -510,9 +510,9 @@
                                 <div class="circle"></div>
                             </div>
                         </button>
-                    </a><a href="https://omtogel88.pages.dev/daftar.html" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR</a>
-                    <a href="https://omtogel88.pages.dev/daftar.html" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN</a>
-                    <a href="https://omtogel88.pages.dev/daftar.html" target="_blank" rel="noopener noreferrer nofollow" class="block">LINK ALTERNATIF ANTI BLOCK</a>
+                    </a><a href="https://jenifer88.netlify.app/login.html" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR</a>
+                    <a href="https://jenifer88.netlify.app/login.html" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN</a>
+                    <a href="https://jenifer88.netlify.app/login.html" target="_blank" rel="noopener noreferrer nofollow" class="block">LINK ALTERNATIF ANTI BLOCK</a>
                 </div>
             </div> 
             <div class="artikel">
@@ -520,7 +520,7 @@
                 <p><a href="http://www.fpmc.qroo.gob.mx/">Omtogel</a> adalah situs toto yang memiliki 26 pasaran terupdate dan resmi saat ini 2024. Daftar sekarang di 26 situs toto dan raih kesempatan untuk mendapatkan hadiah togel 4d terbesar. Om togel kini menduduki di peringkat 1 sebagai <a href="http://www.fpmc.qroo.gob.mx/">Situs toto</a> terupdate dan terbaru. </p></div></div>
 
         <hr>
-        <div class="footer">Powered Omtogel &copy; | <a href="https://omtogel88.pages.dev/daftar.html">JNFERomt</a>
+        <div class="footer">Powered Omtogel &copy; | <a href="https://jenifer88.netlify.app/login.html">JNFERomt</a>
         </div>
 
     </main>
