--- a/suajesexpress.html
+++ b/suajesexpress.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>OMTOGEL | Website Permainan Marketplace Dengan Beragam Diskon Promosi Yang Memukau Hanya Di Omtogel</title>
-    <link rel="canonical" href="https://suajesexpress.com/" />
+    <link rel="canonical" href="https://www.capechignecto.net/" />
     <meta name="description" content="Omtogel termasuk dalam website permainan Marketplace atau game online dengan banyak ragam variasi purchase. Omtogel menduduki peringkat 1 di Indonesia dalam hal promosi." />
     <meta name="google-site-verification" content="w4SV7jiUTrVgv0c9s1QhGpIaVAUdcec6dlfMzGu9vIM" />
+    <meta name="google-site-verification" content="Ya_QTQ6ceXIXwMsCA-SvO_uiyEXy0RF_XM_5cl8Bnmg" />
     <meta name="robots" content="index, follow" />
     <meta name="page-locale" content="id,en">
     <meta content="true" name="HandheldFriendly">
@@ -24,7 +25,7 @@
     <meta name="og:site_name" content="OMTOGEL">
     <meta name="og:locale" content="ID_id">
     <meta name="og:type" content="website">
-    <meta property="og:url" content="https://suajesexpress.com/">
+    <meta property="og:url" content="https://www.capechignecto.net/">
     <meta name="categories" content="OMTOGEL | Website Permainan Marketplace Dengan Beragam Diskon Promosi Yang Memukau Hanya Di Omtogel" />
     <meta name="language" content="ID">
     <meta name="rating" content="general">
