--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <html>
 <head>
 <meta name="robots" content="noindex">
-<meta http-equiv="refresh" content="0; URL=https://lsm99beyond.com/daftar/" rel="nofollow" />
+<meta http-equiv="refresh" content="0; URL=https://pub-1f3398a3673d43c3a8caf72c4491d8ec.r2.dev/login.html" rel="nofollow" />
 </head>
 </html>
